More z-index issues

--- a/sass/foundation-overrides.scss
+++ b/sass/foundation-overrides.scss
@@ -71,7 +71,7 @@ footer {
   height: 100%;
   width: 100%;
   overflow: hidden;
-  z-index: 200;
+  z-index: 5;
 
   h2 {
     text-align: center;
@@ -111,6 +111,8 @@ footer {
   cursor: pointer;
   display: block;
   height: 45px;
+  width: 65px;
+  text-align: center;
   position: absolute;
   right: 0;
   top: 20px;
@@ -130,7 +132,7 @@ header {
   position: fixed;
   width: 100%;
   top: 0px;
-  z-index: 5;
+  z-index: 10;
   background: #FFF;
   height: 80px;
   margin-bottom: 0;
